vendor/cache/ruby/2.4.0/extensions/x86_64-darwin-14/2.4.0/json-1.8.3/gem_make.out
current directory: /Users/chengjun/GitHub/data-science-lab.github.io/vendor/cache/ruby/2.4.0/gems/json-1.8.3/ext/json/ext/generator
/Users/chengjun/.rvm/rubies/ruby-2.4.0/bin/ruby -r ./siteconf20170112-41936-2u5mvy.rb extconf.rb
creating Makefile

current directory: /Users/chengjun/GitHub/data-science-lab.github.io/vendor/cache/ruby/2.4.0/gems/json-1.8.3/ext/json/ext/generator
make "DESTDIR=" clean

current directory: /Users/chengjun/GitHub/data-science-lab.github.io/vendor/cache/ruby/2.4.0/gems/json-1.8.3/ext/json/ext/generator
make "DESTDIR="
compiling generator.c
generator.c:861:25: error: use of undeclared identifier 'rb_cFixnum'
    } else if (klass == rb_cFixnum) {
                        ^
generator.c:863:25: error: use of undeclared identifier 'rb_cBignum'
    } else if (klass == rb_cBignum) {
                        ^
2 errors generated.
make: *** [generator.o] Error 1

make failed, exit code 2
